--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,9 @@
-DB_NAME=dbname
 DB_CONN_STR=mongodb://username:password@localhost/dbname
 
-PORT=8080 
-#development mode only
+## Development
+PORT=8080
+
+##Testing
+
+
+## Production
