ft-login-user-173103903(login user): - ensure the user is authenticated with jwt - ensure ensure authorization for different user types is set, admin, manager, agent and normal user -ensure a user gets a teken even on signup - ensure protected routes can only be accessed witha token

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,9 @@
 DB_CONN_STR=mongodb://username:password@localhost/dbname
 TOKEN_SECRET=secure
+
 ## Development
 PORT=8080
+BASE_URL=http://127.0.0.1:8080
 
 ##Testing
 
