ft-user-profile-173317076(user profile): - ensure an admin can activate and deactivate accounts

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 DB_CONN_STR=mongodb://username:password@localhost/dbname
-TOKEN_SECRET=secure
+TOKEN_SECRET=securekeylikeseriouslysecurethrowinabuchofstufflike123and&()*theywillneverguess100%suretheywontCAPSTOO:)
 
 ## Development
 PORT=8080
